- gitignore 파일 수정   spring/root-context.xml 코드 추가   -MATA/ 하위 파일 ignore 처리

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,9 @@ local.properties
 .settings/
 .loadpath
 .recommenders
-.MF
-pom.properties
+META-INF/MANIFEST.MF
+META-INF/pom.properties
+spring/root-context.xml
 
 # External tool builders
 .externalToolBuilders/
